...
import UIKit

class ProfileViewController: UIViewController {
    
    @IBOutlet weak var profileImageView: UIImageView!

    @IBOutlet var userNameTF: UITextField!
    @IBOutlet var infoAboutUserTF: UITextField!
    
    @IBOutlet var editProfileImageButton: UIButton!
    @IBOutlet var editProfileButton: UIButton!
    @IBOutlet var cancelButton: UIButton!
    @IBOutlet var saveGCDButton: UIButton!
    
...
