...
    
    @objc func addNewChannelButtonTapped(_ sender: Any) {
        newChannelAlert()
    }
    
    private func setupView() {
        title = "Channels"
        view.addSubview(tableView)
        view.addGestureRecognizer(panGestureRecognizer)
        
        setupUserProfileButton()
        setupLeftBarButtons()
        UILabel.appearance(whenContainedInInstancesOf: [UINavigationBar.self]).adjustsFontSizeToFitWidth = true
...
